maze.lessons.maze.island.IslandMaze.scala.error
Escaper:33: error: not found: value North
		if (getDirection() == North) {
                                      ^Escaper:37: error: not found: value North
			while (getDirection() != North) {
                                                 ^